--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
+    "vercel": "^39.2.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
